made the scroll bar always visible on widget to prevent weird jumpy crap

--- a/SizeUp.Web/Content/widget/layout.css
+++ b/SizeUp.Web/Content/widget/layout.css
@@ -27,7 +27,7 @@ body { width: 100%; }
 
 /********contenty things go here*************/
 #content {height: auto; min-height: 25em; position: relative; }
-#contentWrap {overflow:auto; overflow-x:hidden; padding:0 2em;}
+#contentWrap {overflow:auto; overflow-x:hidden; overflow-y:scroll; padding:0 2em;}
 
 
 
